--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "ef81f520-0831-407d-94f5-f35ea5156a21"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
